# whatssock

./: Cargo.toml  LICENSE  README.md  banner.kra  banner.png~
whatssock-desktop/: Cargo.toml
whatssock-desktop/assets/: main.css
whatssock-desktop/src/: api_requests.rs  lib.rs  main.rs
whatssock-desktop/src/authentication/: auth.rs
whatssock-desktop/src/ui/: login.rs  main_page.rs  register.rs
whatssock-lib/: Cargo.toml
whatssock-lib/src/: client.rs  domain_paths.rs  lib.rs  server.rs
whatssock-mobile/: Cargo.toml  Dioxus.toml
whatssock-mobile/assets/: main.css
whatssock-mobile/src/: lib.rs  main.rs
whatssock-mobile/src/authentication/: auth.rs
whatssock-mobile/src/ui/: login.rs  main_page.rs
whatssock-server/: Cargo.toml
whatssock-server/migrations/2025-07-08-152154_user_signin_token/: up.sql
whatssock-server/migrations/2025-07-14-103133_messages/: up.sql
whatssock-server/migrations/2025-08-23-105704_user_session_auth/: down.sql  up.sql
whatssock-server/src/: lib.rs  main.rs  models.rs  schema.rs
whatssock-server/src/api/: chatrooms.rs  mod.rs  user_account_control.rs  websocket.rs
whatssock-web/: Cargo.toml  Dioxus.toml
