[package]
name = "whatssock-server"
version = "0.1.0"
edition = "2024"

[dependencies]
whatssock-lib = { path = "../whatssock-lib" }
anyhow = "1.0.98"
axum = {version = "0.8.4", features = ["macros", "ws", "tracing"]}
diesel = { version = "2.2.11", features = ["postgres", "chrono", "r2d2"] }
dotenvy = "0.15.7"
serde = {version = "1.0.219", features = ["derive"]}
# kafka = "0.10.0"
tokio = { version = "1.46.0", features = ["full", "tracing"] }
uuid = "1.17.0"
r2d2 = "0.8.10"
log = "0.4.27"
chrono = "0.4.41"
rand = "0.9.1"
env_logger = "0.11.8"
rmp-serde = "1.3.0"
futures-util = "0.3.31"
dashmap = "6.1.0"
tokio-util = "0.7.15"
console-subscriber = "0.4.1"
indexmap = "2.10.0"
bytemuck = "1.23.2"
aes = "0.8.4"
